@@ -14,6 +14,7 @@ CCW+13,"rat INS-1beta cells in 27 mM vs 11 mM glucose",,126,60,-0.1525,-0.1588,-
 LDB+15_all,"Chinese hamster ovary cells in 15 g/L vs 5 g/L glucose",,294,205,-0.1208,-0.1438,-0.0231,0.0305,0.0145,-0.0161,-1.6439,-1.7023,-0.0584,0.2962,0.3287,0.0326,434,390,-44,NA,NA,NA,NA,NA,NA
 SFKD17_1EG,"secretome of murine islets of Langerhans in 25 mM vs 11 mM glucose for 1 day",,59,54,-0.1279,-0.1235,0.0045,0.0166,-0.0072,-0.0238,-1.6129,-1.6296,-0.0167,0.3457,0.2948,-0.051,276,387,111,NA,NA,NA,NA,NA,NA
 SFKD17_2EG,"secretome of murine islets of Langerhans in 25 mM vs 11 mM glucose for 2 days",,82,104,-0.1277,-0.1283,-6e-04,0.0038,0.0216,0.0178,-1.6229,-1.6381,-0.0152,0.276,0.3115,0.0355,336,348.5,12.5,NA,NA,NA,NA,NA,NA
+HGC+18,"Lactobacillus casei BL23 in hyper-concentrated vs isotonic sweet whey",microbial,116,64,-0.1497,-0.1367,0.013,0.0841,0.0462,-0.0379,-1.7365,-1.723,0.0135,0.4309,0.3923,-0.0386,268,301,33,NA,NA,NA,NA,NA,NA
 IXA+19,"human aortal endothelial cells in 20 mM vs 5 mM glucose",,49,331,-0.1398,-0.1338,0.0061,0.0621,0.0174,-0.0448,-1.7119,-1.6881,0.0239,0.3598,0.3333,-0.0264,394,521,127,2.7317,2.7205,-0.0112,3.9796,3.7938,-0.1857
 MHP+20_H9c2,"rat H9c2 cells in 30 mM vs 5 mM glucose",,17,20,-0.1697,-0.1478,0.0219,0.0397,0.0082,-0.0315,-1.7637,-1.6752,0.0885,0.4009,0.3476,-0.0533,512,417.5,-94.5,NA,NA,NA,NA,NA,NA
 MHP+20_HEK,"human embryonic kidney cells in 30 mM vs 5 mM glucose",,127,39,-0.1319,-0.1531,-0.0212,0.0427,0.0162,-0.0265,-1.668,-1.731,-0.0629,0.3458,0.349,0.0032,411,467,56,2.6379,3.3529,0.715,3.5303,4.3158,0.7855
