@@ -2650,3 +2650,13 @@
   year      = {2020},
   doi       = {10.1021/acs.jproteome.9b00790},
 }
+
+@Article{HGC+18,
+  author    = {Huang, Song and Gaucher, Floriane and Cauty, Chantal and Jardin, Julien and Le Loir, Yves and Jeantet, Romain and Chen, Xiao Dong and Jan, Gwénaël},
+  journal   = {Frontiers in Microbiology},
+  title     = {Growth in hyper-concentrated sweet whey triggers multi stress tolerance and spray drying survival in \emph{{L}actobacillus casei} {BL23}: from the molecular basis to new perspectives for sustainable probiotic production},
+  year      = {2018},
+  pages     = {2548},
+  volume    = {9},
+  doi       = {10.3389/fmicb.2018.02548},
+}
